# Classes_Schedule_Program

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 72a137a8382c_initial_migration.py
app/: db.py  dependencies.py  main.py
app/Schemas/: base.py
app/Schemas/auth/: __init__.py  login.py  register.py  token.py
app/Schemas/faculty/: __init__.py  base.py  dto.py  response.py
app/Schemas/schedule/: __init__.py  assignment.py  base.py  dto.py  response.py
app/Schemas/user/: __init__.py  base.py  dto.py  response.py
app/Services/: auth_service.py  faculty_service.py  schedule_service.py  user_service.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  faculties.py  schedules.py  users.py
app/core/: constants.py  logging.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  base.py  classroom.py  course.py  course_offering.py  department.py  faculty.py  instructor.py  instructor_availability.py  program_class.py  schedule.py  schedule_assignment.py  schedule_review_note.py  term.py  time_slot.py  user.py
app/repositories/: base.py  classroom.py  course_offering.py  department.py  faculty.py  instructor.py  schedule.py  schedule_assignment.py  term.py  time_slot.py  user.py
app/utils/: conflicts.py  filters.py  normalization.py  time_utils.py  validators.py
